--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="blue box" id="qa-block">
-    <div class="orange box">
-      <div class="grey box">In programming languages, a closure is a technique for implementing lexically
+  <div class="box blue-box" id="qa-block">
+    <div class="box orange-box">
+      <div class="box grey-box">
+        In programming languages, a closure is a technique for implementing lexically
         scoped name binding in a language with first-class functions. Operationally, a
         closure is a record storing a function together with an environment.
       </div>
     </div>
   </div>
-  <div class="blue box">
-    <div class="orange box">
-      <div class="grey box">У програмуванні замиканням називають підпрограму, що виконується в середовищі,
+
+  <div class="box blue-box">
+    <div class="box orange-box">
+      <div class="box grey-box">
+        У програмуванні замиканням називають підпрограму, що виконується в середовищі,
         яке містить одну або більше зв’язаних змінних. Підпрограма має доступ до цих
         змінних під час виконання.
       </div>
     </div>
   </div>
-  <div class="blue box">
-    <div class="orange box">
-      <div class="grey box">Замыкание в программировании — функция первого класса, в теле которой
+
+  <div class="box blue-box">
+    <div class="box orange-box">
+      <div class="box grey-box">
+        Замыкание в программировании — функция первого класса, в теле которой
         присутствуют ссылки на переменные, объявленные вне тела этой функции в
         окружающем коде и не являющиеся её параметрами.
       </div>
